src/styles/components/mobile-menu.scss
.menu-icon {
   z-index: 9998;
  color: $color-body-text;
  color: var(--header-text);



  &.mobile-icon  {
    color: var(--color-menu-drawer-text);
    display: none;
    margin-left: auto;
    padding: 0.3em 0.4em;
  }


  a , button{
    display: inline-block;
    position: relative;
    @extend %hover;
    color: var(--header-text);
  }
}

.mobile-menu__inner {
  --header-text: var(--color-menu-drawer-text);
  .mobile-socials, .cart-icon {
    opacity: 1;
  }

  .menu-icon {
    margin: 1.5em auto;
    opacity: 0.8;

    &:hover {
      opacity: 1;
    }
  }


  ul li {
    display: block;
  }
}


.mobile-menu__content {
  background: $color-menu-drawer-bg;
  color: $color-menu-drawer-text;

  a {
    color: $color-menu-drawer-text;
  }

}

nav.mobile-menu__inner {
  max-width: calc(300px + 5vw);
  width: 100%;
  margin: auto;
  padding: 40px 5%;
  overflow-y: auto;
  max-height: calc(100*var(--vh, vh));

  @include noScrollbar();

  ul.child-menu {
    position: relative;
    top: 0;
    pointer-events: all;
    margin: 0 0 12px;
    padding-left: 20px;
    li {
      opacity: 1;
      transform: translateY(0);
      margin: 0;
    }
    a {
      padding: 0.3em 0
    }
  }

  a.parent-link::after {
    display: none;
  }

  ul {
    padding: 0;
    list-style: none;
    letter-spacing: none;
  }
  li {
    display: block;
  }

}

.mobile-nav-toggle {
  display: none;
  font-size: 1em;
  width: auto;
  // height: 35px;

  align-items: center;
  justify-content: center;
  z-index: 1000;
  position: relative;
  appearance: none;
  background: transparent;
  border: none;

  i {
    font-size: 1.1em;

  }
}

@mixin mobileNavStyle() {
  .menu-icon.mobile-icon {
    display: inline-block;
  }
    .mobile-nav-toggle {
      display: flex;
    }

    .social-wrap {
      display: none;
    }

    .mobile-menu-extra {
      .social-wrap {
        display: block;
      }
    }
    .nav-inner {
      .menu-icon .visually-hidden {
        @include visually-shown();
      }
    }

    .main-menu {
      display: block;
    }

  //Always, not just make-mobile

  .menu-icon {
    display: block;
    text-transform: uppercase;
    font-weight: bold;
    a {
      text-decoration: none;

    }
  }
  &.mobile--left-nocart {
    .mobile-cart {
      display: none;
    }
  }

  &.mobile--centered-cart {
    header,
    .mobile-logo {
      order: 2;
      flex: 1 1 auto;
      text-align: center;
      .site-header__logo {
        display: inline-block;
        width: auto;
        margin: 5px 0px;
        position: relative;
        padding: 0;
        width: 100%;
      }
    }

    .mobile-cart {
      order: 1;
      padding: 0.4em 0.6em;
      margin-right: auto;

    }
    .mobile-nav-toggle {
      order: 3;
    }
  }
}

 //End mobile menu style}
@include media-query($small) {
.mobile--disabled nav {
  li {
    display: inline-block !important;
  }
}

.site-header__inner.mobile--small {
  ul.main-menu {
    display: none;
  }
    @include mobileNavStyle();
  }
}
@include media-query($medium) {
.mobile--disabled nav {
  li {
    display: inline-block !important;
  }
}

.site-header__inner.mobile--medium {
  ul.main-menu {
    display: none;
  }
    @include mobileNavStyle();
  }
}

.site-header__inner.mobile--always {
  ul.main-menu {
    display: none;
  }
  @include mobileNavStyle();

}

.mobile-menu-extra {
  display: none;
  @include media-query($small) {
    display: block;
    margin: 10px auto;
  }
}

